Assignment 3/css/style.css
html{
  width: 100%;
  height: 100%;
}

body{
  margin: 0;
  width: 100%;
  height: 100%;
}

#button ul{
  list-style: none;
  padding: 0;
}

#button{
  height: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.info{
  display: flex;
  justify-content: center;
}

.info img{
  transform: scale(1.5);
  margin-right: 18px;
}

.info{
  color: white;
}

.info li{
  margin-top: 7px;
}

#bottom-positioner{
  position: fixed;
  text-align: center;
  bottom: 10%;
  width: 100%;
}


.like, .posted{
  display: inline;
  margin:0 9px;
  line-height: 67px;
  color: #079E6E;
  font-size: 18pt;
}

.user{
  font-size: 18pt;
}

.comment{
  font-size: 37pt;
}

#control-ring{
  position: absolute;
  display: flex;
  justify-content: center;
}

#control-ring li{
  position: absolute;
  height: 40px;
  width: 40px;
  transform: translateY(-32px);
  border-radius: 50%;
  background-color: rgba(102,102,102,1);
  opacity: 0;
  transition-property: all;
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: all;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
}

#button:hover .mask{
  opacity: 1;
  background-image: url("../assets/images/nomask.png");
  background-repeat: no-repeat;
  background-position: 50% 50%;
  transform: translate(-75px,-76px);
}

#button:hover .history{
  opacity: 1;
  background-image: url("../assets/images/history.png");
  background-repeat: no-repeat;
  background-position: 50% 50%;
  transform: translate(-90px,-32px);
}

#button:hover .message{
  opacity: 1;
  background-image: url("../assets/images/message.png");
  background-repeat: no-repeat;
  background-position: 50% 50%;
  transform: translate(-75px, 14px);
}

.message span{
  display: inline-block;
  color: white;
  font-size: 10pt;
  width: 20px;
  height: 20px;
  line-height: 17px;
  transform: translate(14px, -10px);
  border-radius: 50%;
  background-color: red;
}

#button:hover .setting{
  opacity: 1;
  background-image: url("../assets/images/setting.png");
  background-repeat: no-repeat;
  background-position: 50% 50%;
  transform: translate(-36px, 43px);
}

#button:hover .sign{
  opacity: 1;
  background-image: url("../assets/images/signin.png");
  background-repeat: no-repeat;
  background-position: 50% 50%;
  transform: translate(15px , 49px);
}

#button #info-bar{
  position: absolute;
  margin-bottom: 15px;
  height: 0px;
  width: 0px;
  opacity: 0;
  display: flex;
  justify-content: center;
  text-align: center;
  background-color: rgba(126,126,126,1);
  border-radius: 50%;
  transition-property: all;
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: all;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
}

#button:hover #info-bar{
  height: 200px;
  width: 200px;
  opacity: 1;
  transform: translateY(-125px) scale(0.8);
}

#button .apb{
  position: absolute;
  background-color: rgba(154,160,218,1);
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-image: url("../assets/images/atplus_white.png");
  border-radius: 50%;
  margin: 0 auto;
  width: 32px;
  height: 32px;
  transition-property: all;
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: all;
  -webkit-transition-duration: 0.5s;
  -webkit-transition-timing-function: ease-in-out;
}

#button:hover .apb{
  height: 100px;
  width: 100px;
  transform: scale(0.7);
  background-color: rgba(48, 63, 159, 1);
  background-image: url("../assets/images/atplus_green.png");
}

